# FastAPI-MySQL

./: database.py  main.py  pyproject.toml  settings.py
repository/: activityMapping_repo.py  activity_repo.py  awardMapping_repo.py  award_repo.py  certification_repo.py  completedCourse_repo.py  course_repo.py  degree_repo.py  education_repo.py  highSchool_repo.py  honorMapping_repo.py  honor_repo.py  internship_repo.py  keyword_mapping_repo.py  keyword_repo.py  online_course_repo.py  personal_info_repo.py  project_repo.py  skillValidatedMapping_repo.py  skillValidated_repo.py  thesis_repo.py  user_repo.py
routers/: activityMapping_router.py  activity_router.py  auth_router.py  awardMapping_router.py  award_router.py  certification_router.py  completedCourse_router.py  course_router.py  degree_router.py  education_router.py  highSchool_router.py  honorMapping_router.py  honor_router.py  internship_router.py  keyword_mapping_router.py  keyword_router.py  online_course_router.py  personal_info_router.py  project_router.py  skillValidatedMapping_router.py  skillValidated_router.py  thesis_router.py  user_router.py
schema/: activity.py  activityMapping.py  award.py  awardMapping.py  certification.py  completedCourse.py  course.py  degree.py  education.py  highSchool.py  honor.py  honorMapping.py  internship.py  keyword.py  keyword_mapping.py  online_course.py  personalInfo.py  project.py  skillValidated.py  skillValidatedMapping.py  thesis.py  user.py  userAuth.py
services/: activityMapping_service.py  activity_service.py  auth_service.py  awardMapping_service.py  (+19 more)
